<resources>
    <string name="app_name">爱拼才会赢</string>
    <string name="search">搜索</string>
    <string name="main_index_tab">首页</string>
    <string name="main_discover_tab">精选</string>
    <string name="main_publish_tab">发布</string>
    <string name="main_chat_tab">私聊</string>
    <string name="main_me_tab">我的</string>
    <string name="label_car">拼 车</string>
    <string name="label_course">拼 课</string>
    <string name="label_postal">拼 邮</string>
    <string name="label_group">拼 团</string>
    <string name="login_phoneNum">手机号</string>
    <string name="login_password">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="login_password_repeat">重复密码</string>
    <string name="me_label_order_number">拼单次数</string>
    <string name="me_label_school">学 校</string>
    <string name="me_label_sex">性 别</string>
    <string name="me_label_fans">我的粉丝</string>
    <string name="me_label_focus">我的关注</string>
    <string name="me_label_publish">我的发布</string>
    <string name="me_label_merge">我拼到的</string>
    <string name="me_label_comments">我评论的</string>
    <string name="tab_view">tab_view</string>
    <string name="shadow">top_shadow</string>
    <string name="publish">publish</string>
    <string name="publish_title">输入标题</string>
    <string name="publish_type">分类</string>
    <string name="publish_toolbar_title">发布</string>
    <string name="publish_description_hint">添加补充说明•••</string>
    <string name="label_zero">0</string>
    <string name="label_nickname">昵称</string>
    <string name="label_man">男</string>
    <string name="label_woman">女</string>
    <string name="label_sex">性 别</string>
    <string name="user_label_fans">他的粉丝</string>
    <string name="user_label_comment_24dp">他的评论</string>
    <string name="user_label_focus">他的关注</string>
    <string name="user_label_publish">他的发布</string>
    <string name="user_label_merge">他拼到的</string>
    <string name="label_follow">关注</string>
    <string name="user_label_send_message">发消息</string>
    <string name="label_followed">已关注</string>
    <string name="label_add_location">添加定位</string>
    <string name="label_add_image">添加图片</string>
    <string name="delete">删除</string>
    <string name="label_change_bg">更换背景</string>
    <string name="publish_direction">输入方向</string>
    <string name="label_no_more">没有更多了</string>
    <string name="label_detail">详情</string>
    <string name="label_comment">评论</string>
    <string name="label_add_comment">添加评论</string>
    <string name="label_search">搜索</string>
    <string name="label_search_result">搜索结果</string>
    <string name="label_send">发送</string>
    <string name="label_verify_now">立即认证</string>
    <string name="label_confirm">确认</string>
</resources>
