<?xml version="1.0" encoding="utf-8"?>
<info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/publish_type_course"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp">

    <RadioButton
            android:id="@+id/publish_type_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/label_course"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/label_postal"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/label_car"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/label_group"/>

</info.hoang8f.android.segmented.SegmentedGroup>