<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.mergeorder.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            toolbar:title="@string/me_label_publish"
            toolbar:titleTextColor="@color/white">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/colorSearchBar">

            <ImageView
                    android:id="@+id/index_search_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_search_white_24dp"/>

            <TextView
                    android:id="@+id/index_search_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/index_search_view"
                    android:layout_toEndOf="@id/index_search_view"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_above="@+id/bottom"/>

    <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:background="@color/bottom_tabs_bg"
            app:layout_behavior="com.mergeorder.presentation.behavior.BottomViewBehavior"
            android:orientation="horizontal">

        <RadioGroup
                android:id="@+id/bottom_tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

            <RadioButton
                    android:id="@+id/index_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/selector_ic_index"
                    android:gravity="center|bottom"
                    android:text="@string/main_index_tab"
                    android:textColor="@drawable/selector_text"/>

            <RadioButton
                    android:id="@+id/discover_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:button="@null"
                    android:drawableTop="@drawable/selector_ic_discover"
                    android:gravity="center|bottom"
                    android:textColor="@drawable/selector_text"
                    android:text="@string/main_discover_tab"/>

            <!--<RadioButton-->
                    <!--android:id="@+id/publish_tab"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@color/transparent"-->
                    <!--android:button="@null"-->
                    <!--android:drawableTop="@drawable/ic_publish"-->
                    <!--android:gravity="center|bottom"-->
                    <!--android:textColor="@color/transparent"-->
                    <!--android:text="@string/main_publish_tab"/>-->

            <RadioButton
                    android:id="@+id/chat_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:button="@null"
                    android:drawableTop="@drawable/selector_ic_chat"
                    android:gravity="center|bottom"
                    android:textColor="@drawable/selector_text"
                    android:text="@string/main_chat_tab"/>

            <RadioButton
                    android:id="@+id/me_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:button="@null"
                    android:drawableTop="@drawable/selector_ic_me"
                    android:gravity="center|bottom"
                    android:textColor="@drawable/selector_text"
                    android:text="@string/main_me_tab"/>
        </RadioGroup>
    </LinearLayout>

    <!--<com.mergeorder.presentation.view.MainNavigateTabBar-->
            <!--android:id="@+id/bottom_tabs"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@android:color/white"-->
            <!--app:containerId="@+id/content"-->
            <!--app:navigateTabSelectedTextColor="@color/colorPrimary"-->
            <!--app:navigateTabTextColor="@color/greyText" />-->

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom"
            android:background="@mipmap/shadow"
            android:contentDescription="@string/shadow"/>

    <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="76dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:gravity="center|top"-->
            <!--android:orientation="vertical">-->

        <!--<ImageView-->
                <!--android:id="@+id/tab_post_icon"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="onClickPublish"-->
                <!--android:src="@drawable/ic_add_circle_36dp"-->
                <!--android:contentDescription="@string/publish"/>-->
    <!--</LinearLayout>-->

</RelativeLayout>
